--- a/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
+++ b/src/MultiAlign/Windows/Viewers/Clusters/ClusterControl.xaml
@@ -48,58 +48,21 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>             
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="60*"/>
-                <RowDefinition Height="40*"/>
-            </Grid.RowDefinitions>
-
-            <TabControl
-                Grid.Row="1"
-                Grid.Column="0">
-                <TabItem 
-                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                    FontSize="14"
-                    Width="128"
-                    Header="Cluster Mass vs. NET"
-                    >                    
-                    <ContentControl
-                        Margin="1"
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Content="{Binding ClusterChartHost}"
-                        >
-                    </ContentControl>
-                </TabItem>
-                <TabItem 
-                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
-                    FontSize="16"
-                    Width="196"
-                    Header="Cluster Mass vs. Drift Time"
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="40*"/>
+                </Grid.RowDefinitions>
+                <Label
+                    Foreground="Gray"
+                    FontSize="18"
                     >
-
-                    <WindowsFormsHost
-                        Margin="1,1,1,1"
-                        Grid.Row="0"                        
-                        Grid.Column="2">
-                        <maCharts:SingleClusterChart
-                                x:Name="m_driftChart"                                
-                                Title=""                                
-                                IsDriftTimeXAxis="True"
-                                XAxisLabel="Drift Time (ms)"
-                                YAxisShortHand="ppm"
-                                XAxisShortHand="ms"
-                                LegendVisible="False"
-                                />
-                    </WindowsFormsHost>
-                </TabItem>
-            </TabControl>
-
+                    Features
+                </Label>
                 <ScrollViewer
                     Margin ="5"
                     HorizontalScrollBarVisibility="Hidden"
                     VerticalScrollBarVisibility="Auto"
-                    Grid.Row="2">                                    
+                    Grid.Row="1">                                    
                     <ListBox
                         
                             FontSize="14"               
@@ -119,96 +82,112 @@
                         Width="3"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch"
-                        Background="#FF00000A"/> 
-        <Grid
-            Grid.Column="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Border
+                        Background="#FF00000A"/>
+
+            <TabControl
+                Margin="5"
                 Grid.Row="0"
-                BorderBrush="LightGray"
-                BorderThickness="1"
-                Margin="5">                    
-                                   
-            </Border>
-                <Grid 
-                    Grid.Row="5">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="64"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <Label 
-                        FontSize="12"
-                        Margin="5"
-                        Foreground ="Gray"  
-                        HorizontalAlignment="Right"
-                        VerticalContentAlignment="Center"                      
+                Grid.Column="2">
+                <TabItem 
+                            Header="Cluster Data"
+                            Style="{DynamicResource ResourceKey=SimpleTabItem}">
+
+                    <TabControl
+                Grid.Row="1"
+                Grid.Column="0">
+                        <TabItem 
+                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
+                    FontSize="14"
+                    Width="128"
+                    Header="Cluster Mass vs. NET"
+                    >
+                            <ContentControl
+                        Margin="1"
                         Grid.Row="0"
-                        Grid.Column="1">Select Charge</Label>
-                    <ComboBox
-                            FontSize="18"
-                            Width="200"
-                            HorizontalAlignment="Right"
-                            HorizontalContentAlignment="Left"
-                            ItemTemplate="{StaticResource ResourceKey=ChargeStateTemplate}"
-                            SelectedItem="{Binding SelectedCharge, 
-                                            UpdateSourceTrigger=PropertyChanged,
-                                            Mode=TwoWay,
-                                            NotifyOnSourceUpdated=True}"
-                            ItemsSource="{Binding Charges,                             
-                                            UpdateSourceTrigger=PropertyChanged,
-                                            NotifyOnSourceUpdated=True}"                        
-                            Margin="5"
-                            Grid.Column="2"/>
-                </Grid>
-                
-                <GridSplitter
-                        Grid.Row="3"            
-                        Height="3"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch"
-                        Margin="1"
-                        Background="#FFA0A0A0"/>
-                <Label 
-                    Margin="5"
-                    Foreground ="Gray"  
-                    Content="Extracted Ion Chromatrogram"
+                        Grid.Column="0"
+                        Content="{Binding ClusterChartHost}"
+                        >
+                            </ContentControl>
+                        </TabItem>
+                        <TabItem 
+                    Style="{DynamicResource ResourceKey=SimpleTabItem}"
                     FontSize="16"
-                    HorizontalContentAlignment="Center"
-                    VerticalContentAlignment="Center"                      
-                    Grid.Row="0"/>                
-                <ContentControl 
-                    Grid.Row="2"
-                    Content="{Binding XicChart}"/>
-                <ContentControl                         
-                    Grid.Row="6" 
-                    Content="{Binding ParentSpectraChart}"
-                    />
-                <GridSplitter
-                        Grid.Row="3"            
-                        Height="3"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch"
-                        Margin="1"
-                        Background="#FFA0A0A0"/>
-            
-        </Grid>        
-    </Grid>
+                    Width="196"
+                    Header="Cluster Mass vs. Drift Time"
+                    >
+
+                            <WindowsFormsHost
+                        Margin="1,1,1,1"
+                        Grid.Row="0"                        
+                        Grid.Column="2">
+                                <maCharts:SingleClusterChart
+                                x:Name="m_driftChart"                                
+                                Title=""                                
+                                IsDriftTimeXAxis="True"
+                                XAxisLabel="Drift Time (ms)"
+                                YAxisShortHand="ppm"
+                                XAxisShortHand="ms"
+                                LegendVisible="False"
+                                />
+                            </WindowsFormsHost>
+                        </TabItem>
+                    </TabControl>
+                </TabItem>
+                <TabItem
+                        Width="Auto"
+                        Header="Extracted Ion Chromatogram"
+                        Style="{DynamicResource ResourceKey=SimpleTabItem}">
+
+                    <Grid >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="50*"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="64"/>
+                            <RowDefinition Height="50*"/>
+                        </Grid.RowDefinitions>
+                        <ContentControl 
+                                Grid.Row="0"
+                                Content="{Binding XicChart}"/>
+                        <GridSplitter
+                                Grid.Row="1"            
+                                Height="3"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Stretch"
+                                Margin="1"
+                                Background="#FFA0A0A0"/>             
+                        <StackPanel 
+                            Grid.Row="2"
+                            Orientation="Horizontal">
+                            <Label 
+                                FontSize="12"
+                                Margin="5"
+                                Foreground ="Gray"  
+                                HorizontalAlignment="Right"
+                                VerticalContentAlignment="Center">
+                                Select Charge</Label>
+                            <ComboBox
+                                FontSize="18"
+                                Width="200"
+                                HorizontalAlignment="Right"
+                                HorizontalContentAlignment="Left"
+                                ItemTemplate="{StaticResource ResourceKey=ChargeStateTemplate}"
+                                SelectedItem="{Binding SelectedCharge, 
+                                                UpdateSourceTrigger=PropertyChanged,
+                                                Mode=TwoWay,
+                                                NotifyOnSourceUpdated=True}"
+                                ItemsSource="{Binding Charges,                             
+                                                UpdateSourceTrigger=PropertyChanged,
+                                                NotifyOnSourceUpdated=True}"                        
+                                Margin="5"/>
+                        </StackPanel>
+                        <ContentControl                         
+                                Grid.Row="3" 
+                                Content="{Binding ParentSpectraChart}"
+                                />
+                    </Grid>
+                </TabItem>
+            </TabControl>
+        </Grid>
     </DockPanel>
 </UserControl>
 
