--- a/src/MultiAlign/Windows/Viewers/RangeView.xaml
+++ b/src/MultiAlign/Windows/Viewers/RangeView.xaml
@@ -10,12 +10,13 @@
             <RowDefinition Height="48"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="128"/>            
+            <ColumnDefinition Width="256"/>            
             <ColumnDefinition Width="128" />
             <ColumnDefinition Width="48"/>
             <ColumnDefinition Width="128"/>
         </Grid.ColumnDefinitions>
-        <CheckBox   Grid.Row="0" Grid.Column="0" Margin="5" FontSize="18" VerticalAlignment="Center" VerticalContentAlignment="Center" IsChecked="{Binding Path=ShouldUse}" Content="{Binding Path=Name}"></CheckBox>        
+        <CheckBox   Grid.Row="0" Grid.Column="0" Margin="5" FontSize="18" VerticalAlignment="Center" 
+                    VerticalContentAlignment="Center" IsChecked="{Binding Path=ShouldUse}" Content="{Binding Path=Name}"></CheckBox>        
         <TextBox    Grid.Row="0" Grid.Column="1" Margin="5" HorizontalContentAlignment="Center" FontSize="16" Text="{Binding Path=Minimum}" />
         <Label      Grid.Row="0" Grid.Column="2" Margin="5" HorizontalContentAlignment="Center" FontSize="16" VerticalContentAlignment="Center" >to</Label>
         <TextBox    Grid.Row="0" Grid.Column="3" Margin="5" HorizontalContentAlignment="Center" FontSize="16" Text="{Binding Path=Maximum}" />        
